--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Data Structures\DataStructure_QuickSort.cs" />
     <Compile Include="Solved Problems\Problems_Amazon_StringConcatCost.cs" />
     <Compile Include="Solved Problems\Problems_Amazon_SumDistinctIntegers.cs" />
+    <Compile Include="Solved Problems\Problems_DynamicProgramming_EditDistance.cs" />
     <Compile Include="Solved Problems\Problems_DynamicProgramming_LongestSubSequence.cs" />
     <Compile Include="Solved Problems\Problems_DynamicProgramming_TextWrap.cs" />
     <Compile Include="Solved Problems\Problems_FindNumberOfRotations.cs" />
